# WindowsMetric

./: .gitignore  README.md
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/windowsmetric/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/windowsmetric/: BleClientManager.kt  BleConstants.kt  BluetoothClientManager.kt  BluetoothHidManager.kt  MainActivity.kt
android/app/src/main/java/com/example/windowsmetric/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/example/windowsmetric/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
project-raw/: health-report.md  implementation_plan.md  project-guide.txt  project-outline.txt  project-roadmap.txt  task.md
shared/: README.md  ble_protocol.md
windows/: CMakeLists.txt  WindowsMetric.manifest  build_output.txt  sign_and_install.ps1
windows/src/: BleConstants.h  BleServer.cpp  BleServer.h  InputSimulator.cpp  InputSimulator.h  MetricCollector.cpp  MetricCollector.h  RfcommServer.cpp  RfcommServer.h  main.cpp
